--- a/COLMAR ACADEMY/index.html
+++ b/COLMAR ACADEMY/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Colmar   Academy</title>
 	
-	<link href="C:\projects\COLMAR ACADEMY\resources\index.css" rel="stylesheet" type="text/css">
+	<link href="./resources/index.css" rel="stylesheet" type="text/css">
 	
 </head>
 <html>
@@ -16,7 +16,7 @@
 	<header>
 		<div class="desktop">
 			<div class="logo">
-				<img src="C:\projects\COLMAR ACADEMY\resources\images\images\ic-logo.svg"> <span><strong>COLMAR ACADEMY</strong></span>
+				<img src="./resources/images/images/ic-logo.svg"> <span><strong>COLMAR ACADEMY</strong></span>
 			</div>
 			<nav>
 				<ul>
@@ -26,6 +26,9 @@
 					<li>
 						<a href="#">Online</a>
 					</li>
+                    <li>
+						<a href="#">companies</a>
+					</li>
 					<li>
 						<a href="#">Sign in</a>
 					</li>
@@ -34,17 +37,17 @@
 		</div>
 		<div class="mobile">
 			<ul>
-				<li><img src="C:\projects\COLMAR ACADEMY\resources\images\images\ic-logo.svg"></li>
-				<li><img src="C:\projects\COLMAR ACADEMY\resources\images\images\ic-on-campus.svg"></li>
-				<li><img src="C:\projects\COLMAR ACADEMY\resources\images\images\ic-online.svg"></li>
-				<li><img src="C:\projects\COLMAR ACADEMY\resources\images\images\ic-login.svg"></li>
+				<li><img src="./resources/images/images/ic-logo.svg"></li>
+				<li><img src="./resources/images/images/ic-on-campus.svg"></li>
+				<li><img src="./resources/images/images/ic-online.svg"></li>
+				<li><img src="./resources/images/images/ic-login.svg"></li>
 			</ul>
 		</div>
 	</header>
   
   <!-- Banner -->
 	<div class="flex-content" id="banner">
-		<div class="media-container main-content"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\banner.jpg"></div>
+		<div class="media-container main-content"><img src="./resources/images/images/banner.jpg"></div>
 		<div class="supporting-content">
 			<h3>Learn something new every day</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><a class="button" href="#">Start here</a>
@@ -54,27 +57,27 @@
   <!-- Information -->
 	<div class="flex-content" id="information-section">
 		<div class="main-content">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\information-main.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/information-main.jpg"></div>
 			<h3>It doesn't hurt to keep practicing</h3>
 			<p>"I told my manager I wanted to learn design and shared ways it could be helpful in my current role. He responded right away, said, 'This is awesome,' and my company paid for the course."</p>
 		</div>
 		<div class="supporting-content">
 			<div class="content-image-box">
-				<div class="media-container"><img class="desktop" src="C:\projects\COLMAR ACADEMY\resources\images\images\information-orientation.jpg"></div>
+				<div class="media-container"><img class="desktop" src="./resources/images/images/information-orientation.jpg"></div>
 				<div class="text-content">
 					<h4>Orientation date</h4>
 					<p>Tue 10/11 & Wed 10/12: 8am - 3pm</p><a href="#">Read more</a>
 				</div>
 			</div>
 			<div class="content-image-box">
-				<div class="media-container"><img class="desktop" src="C:\projects\COLMAR ACADEMY\resources\images\images\information-campus.jpg"> <img class="mobile" src="C:\projects\COLMAR ACADEMY\resources\images\images\information-campus-mobile.jpg"></div>
+				<div class="media-container"><img class="desktop" src="./resources/images/images/information-campus.jpg"> <img class="mobile" src="./resources/images/images/information-campus-mobile.jpg"></div>
 				<div class="text-content">
 					<h4>Our campus</h4>
 					<p>Find which campus is close by you</p><a href="#">Read more</a>
 				</div>
 			</div>
 			<div class="content-image-box">
-				<div class="media-container"><img class="desktop" src="C:\projects\COLMAR ACADEMY\resources\images\images\information-guest-lecture.jpg"> <img class="mobile" src="C:\projects\COLMAR ACADEMY\resources\images\images\information-guest-lecture-mobile.jpg"></div>
+				<div class="media-container"><img class="desktop" src="./resources/images/images/information-guest-lecture.jpg"> <img class="mobile" src="./resources/images/images/information-guest-lecture-mobile.jpg"></div>
 				<div class="text-content">
 					<h4>Our guest lecture</h4>
 					<p>Join a keynote with Oliver Sack about music in medical treatment</p><a href="#">Read more</a>
@@ -88,19 +91,19 @@
 		<h2>Start learning</h2>
 		<div class="courses-row">
 			<a class="course" href="#">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\course-software.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/course-software.jpg"></div>
 			<div class="text-content">
 				<h3>Software engineering</h3>
 				<h4>COURSES</h4>
 				<p>Web Development, Mobile Development, iOT, APIs</p>
 			</div></a> <a class="course" href="#">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\course-computer-art.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/course-computer-art.jpg"></div>
 			<div class="text-content">
 				<h3>Computer art</h3>
 				<h4>COURSES</h4>
 				<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
 			</div></a> <a class="course" href="#">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\course-design.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/course-design.jpg"></div>
 			<div class="text-content">
 				<h3>Design</h3>
 				<h4>COURSES</h4>
@@ -109,19 +112,19 @@
 		</div>
 		<div class="courses-row">
 			<a class="course" href="#">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\course-data.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/course-data.jpg"></div>
 			<div class="text-content">
 				<h3>Data</h3>
 				<h4>COURSES</h4>
 				<p>Data Science, Big Data, SQL, Data Visualization</p>
 			</div></a> <a class="course" href="#">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\course-business.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/course-business.jpg"></div>
 			<div class="text-content">
 				<h3>Business</h3>
 				<h4>COURSES</h4>
 				<p>Product Development, Business Development, Startup</p>
 			</div></a> <a class="course" href="#">
-			<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\course-marketing.jpg"></div>
+			<div class="media-container"><img src="./resources/images/images/course-marketing.jpg"></div>
 			<div class="text-content">
 				<h3>Marketing</h3>
 				<h4>COURSES</h4>
@@ -136,21 +139,21 @@
 		<div class="flex-content">
 			<div class="main-content">
 				<div class="media-container">
-					<video controls="" src="C:\projects\COLMAR ACADEMY\resources\video\videos\thesis.mp4">Video could not be loaded.</video>
+					<video controls="" src="./resources/video/videos/thesis.mp4">Video could not be loaded.</video>
 				</div>
 				<h3>Reimagine urban transportation</h3>
 				<p>"Curabitur vitae libero in ipsum portitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effcitur dolor consequat, tristque ligula."</p>
 			</div>
 			<div class="supporting-content">
 				<div class="content-image-box">
-					<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\thesis-fisma.jpg"></div>
+					<div class="media-container"><img src="./resources/images/images/thesis-fisma.jpg"></div>
 					<div class="text-content">
 						<h4>Fisma: Design and Prototype</h4>
 						<p>Designer showcase of new prototype product</p>
 					</div>
 				</div>
 				<div class="content-image-box">
-					<div class="media-container"><img src="C:\projects\COLMAR ACADEMY\resources\images\images\thesis-now-and-then.jpg"></div>
+					<div class="media-container"><img src="./resources/images/images/thesis-now-and-then.jpg"></div>
 					<div class="text-content">
 						<h4>Now and then</h4>
 						<p>Research study about New York</p>
