--- a/e-commerce/item form.html
+++ b/e-commerce/item form.html
@@ -49,6 +49,53 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    
+    <hr>
+    <footer class="footer-distributed">
+
+      <div class="footer-left">
+          <h3>AHArah</h3>
+
+          <p class="footer-links">
+              <a href="#">Home</a>
+              |
+              <a href="#">About</a>
+              |
+              <a href="#">Contact</a>
+              |
+              <a href="#">item form</a>
+          </p>
+
+          <p class="footer-company-name">Copyright © 2020 <strong>AHArah</strong> All rights reserved</p>
+      </div>
+
+      <div class="footer-center">
+          <div>
+              <i class="fa fa-map-marker"></i>
+              <p><span>Hyderabad</span>
+                  Telangana</p>
+          </div>
+
+          <div>
+              <i class="fa fa-phone"></i>
+              <p>+91 77*2**0498</p>
+          </div>
+          <div>
+              <i class="fa fa-envelope"></i>
+              <p><a href="mailto:sagar00001.co@gmail.com">ElegantEx@gmail.com</a></p>
+          </div>
+      </div>
+      <div class="footer-right">
+          <p class="footer-company-about">
+              <span><b>About the company</b></span><br>
+              <strong>AHArah</strong> top most quality delicious food delivery service.
+              Hungry!for faster delivery  download AHArah.
+              pick up and drop any food item within the locations.
+              Restaurants andDeliery partners trained in hygiene protocol
+          </p>
+          
+          </div>
+      </div>
+    </footer>
+
   </body>
 </html>
