--- a/e-commerce/item.html
+++ b/e-commerce/item.html
@@ -142,6 +142,54 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    <hr>
+    <footer class="footer-distributed">
+
+      <div class="footer-left">
+          <h3>AHArah</h3>
+
+          <p class="footer-links">
+              <a href="#">Home</a>
+              |
+              <a href="#">About</a>
+              |
+              <a href="#">Contact</a>
+              |
+              <a href="#">item form</a>
+          </p>
+
+          <p class="footer-company-name">Copyright © 2020 <strong>AHArah</strong> All rights reserved</p>
+      </div>
+
+      <div class="footer-center">
+          <div>
+              <i class="fa fa-map-marker"></i>
+              <p><span>Hyderabad</span>
+                  Telangana</p>
+          </div>
+
+          <div>
+              <i class="fa fa-phone"></i>
+              <p>+91 77*2**0498</p>
+          </div>
+          <div>
+              <i class="fa fa-envelope"></i>
+              <p><a href="mailto:sagar00001.co@gmail.com">ElegantEx@gmail.com</a></p>
+          </div>
+      </div>
+      <div class="footer-right">
+          <p class="footer-company-about">
+              <span><b>About the company</b></span><br>
+              <strong>AHArah</strong> top most quality delicious food delivery service.
+              Hungry!for faster delivery  download AHArah.
+              pick up and drop any food item within the locations.
+              Restaurants andDeliery partners trained in hygiene protocol
+          </p>
+          
+          </div>
+      </div>
+    </footer>
+
 
 </body>
 
