added new files

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Archana<span>Itham</span></a></div>
+            <div class="logo"><a href="#">Archana  <span>Itham</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -43,7 +43,7 @@
                 <div class="text-2">Archana Itham</div>
                 <div class="text-3">And I'm a Junior Full Stack Java Developer<br>
                     <span class="typing"></span></div>
-                    <a href="#">Open To Work</a>
+                    
             </div>
         </div>
     </section>
@@ -68,10 +68,10 @@
     </section>
 
     <!-- education section start -->
-    <section class="education" id="Education">
+    <section class="services" id="Education">
         <div class="max-width">
             <h2 class="title">Education</h2>
-            <div class="edu-content">
+            <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-user-graduate"></i>
@@ -160,7 +160,7 @@
             <div class="card">
                 <div class="box">
                     <!-- <img src="images/profile-1.jpeg" alt=""> -->
-                    <div class="text">NYRL PROJECT</div>
+                    <div class="text">E-COMMERCE PROJECT</div>
                     <p>It is a E-commerce website.For delivering quality and delicious food home .
                         order and receive food to there door step. </p>
                 </div>
@@ -202,7 +202,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Here I'm! Collab me in with your Business and I can make your business Sky rocket across all devices and platforms 
+                    <p>Here I'm! Collab me in,with your Business and I can make your business Sky rocket across all devices and platforms 
                         where all possible ways of your business can grow. I'm an optimistic enthusiastic skilled and Certified Developer
                          where I can rely on my skill's and make massive production,taken training as Full stack Java Developer and always 
                          love to solve through code can't wait to get started </p>
